feat: implementa estrutura de banco de dados para futuras atualizações